# aiOS

./: .gitignore  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  codeql.yml  dependency-review.yml  release.yml  stale.yml
agent-core/: Cargo.toml  build.rs
agent-core/proto/: agent.proto  api_gateway.proto  common.proto  memory.proto  orchestrator.proto  runtime.proto  tools.proto
agent-core/python/: pyproject.toml
agent-core/python/aios_agent/: __init__.py  base.py  orchestrator_client.py
agent-core/python/aios_agent/agents/: __init__.py  creator.py  learning.py  monitoring.py  network.py  package.py  security.py  storage.py  system.py  task.py  web.py
agent-core/python/aios_agent/proto/: __init__.py  agent_pb2.py  agent_pb2_grpc.py  api_gateway_pb2.py  api_gateway_pb2_grpc.py  common_pb2.py  memory_pb2.py  memory_pb2_grpc.py  orchestrator_pb2.py  orchestrator_pb2_grpc.py  runtime_pb2.py  runtime_pb2_grpc.py  tools_pb2.py  tools_pb2_grpc.py
agent-core/python/tests/: conftest.py  test_base_agent.py  test_creator_agent.py  test_learning_agent.py  test_monitoring_agent.py  test_network_agent.py  test_orchestrator_client.py  test_package_agent.py  test_security_agent.py  test_storage_agent.py  test_system_agent.py  test_task_agent.py  test_web_agent.py
agent-core/src/: agent_router.rs  agent_spawner.rs  autonomy.rs  clients.rs  cluster.rs  context.rs  decision_logger.rs  discovery.rs  event_bus.rs  goal_engine.rs  health.rs  main.rs  management.rs  proactive.rs  remote_exec.rs  result_aggregator.rs  scheduler.rs  task_planner.rs  tls.rs
api-gateway/: Cargo.toml  build.rs
api-gateway/src/: budget.rs  claude.rs  main.rs  openai.rs  router.rs
config/: default-config.toml
docs/: HARDWARE.md  PACKAGES.md  README.md  ROADMAP.md  VISION.md
docs/architecture/: AGENT-CONFIGS.md  AGENT-FRAMEWORK.md  CONFIG-REFERENCE.md  ERROR-RECOVERY.md  KERNEL.md  MANAGEMENT-CONSOLE.md  MEMORY-SYSTEM.md  NETWORKING.md  PROTO-DEFINITIONS.md  PYTHON-PACKAGING.md  SECURITY.md  SYSTEM.md  TOOL-REGISTRY.md
docs/guides/: CLAUDE-WORKFLOW.md  TESTING.md
docs/phases/: 01-SETUP.md  02-KERNEL.md  03-BASE-SYSTEM.md  04-AI-RUNTIME.md  05-AGENT-CORE.md  06-TOOLS.md  07-MEMORY.md  08-NETWORKING.md  09-SECURITY.md  10-PACKAGES.md  11-API-GATEWAY.md  12-DISTRO.md  PHASE-TRANSITIONS.md
initd/: Cargo.toml
initd/src/: config.rs  hardware.rs  main.rs  service.rs
kernel/configs/: aios-kernel.config
memory/: Cargo.toml  build.rs
memory/src/: knowledge.rs  longterm.rs  main.rs  migration.rs  operational.rs  working.rs
rootfs/boot/grub/: grub.cfg
rootfs/etc/aios/agents/: creator.toml  learning.toml  monitoring.toml  network.toml  package.toml  security.toml  storage.toml  system.toml  task.toml  web.toml
rootfs/etc/aios/agents/prompts/: learning_agent.txt  monitoring_agent.txt  network_agent.txt  package_agent.txt  security_agent.txt  storage_agent.txt  system_agent.txt  task_agent.txt
rootfs/etc/aios/security/: firewall-rules.toml  policy.toml
rootfs/etc/apparmor.d/: aios-api-gateway  aios-memory  aios-orchestrator  aios-runtime  aios-tools
runtime/: Cargo.toml  build.rs
runtime/src/: grpc_service.rs  inference.rs  main.rs  model_manager.rs
scripts/: build-all.sh  build-initramfs.sh  build-iso.sh  build-kernel.sh  build-llamacpp.sh  build-rootfs.sh  create-release.sh  download-models.sh  first-boot.sh  gen-python-proto.sh  install.sh  run-qemu.sh
tests/e2e/: test_boot.sh
tests/integration/: test_memory.rs  test_orchestrator.rs  test_tools.rs
tools/: Cargo.toml  build.rs
tools/src/: audit.rs  backup.rs  capabilities.rs  executor.rs  firewall_apply.rs  main.rs  registry.rs  sandbox.rs  schema.rs  secrets.rs
tools/src/code/: generate.rs  mod.rs  scaffold.rs
tools/src/container/: create.rs  exec.rs  list.rs  logs.rs  mod.rs  start.rs  stop.rs
tools/src/email/: mod.rs  send.rs
tools/src/firewall/: add_rule.rs  delete_rule.rs  mod.rs  rules.rs
tools/src/fs/: chmod.rs  chown.rs  copy.rs  delete.rs  disk_usage.rs  list.rs  mkdir.rs  mod.rs  move_file.rs  read.rs  search.rs  stat.rs  symlink.rs  write.rs
tools/src/git/: mod.rs  operations.rs
tools/src/hw/: info.rs  mod.rs
tools/src/monitor/: cpu.rs  disk.rs  ebpf.rs  fs_events.rs  logs.rs  memory.rs  mod.rs  network.rs
tools/src/net/: dns.rs  http_get.rs  interfaces.rs  mod.rs  ping.rs  port_scan.rs
tools/src/pkg/: install.rs  list_installed.rs  mod.rs  remove.rs  search.rs  update.rs
tools/src/plugin/: create.rs  events.rs  manage.rs  mod.rs  templates.rs  triggers.rs  validate.rs
tools/src/process/: cgroup.rs  info.rs  kill.rs  list.rs  mod.rs  signal.rs  spawn.rs
tools/src/sec/: audit.rs  audit_query.rs  cert_generate.rs  cert_rotate.rs  check_perms.rs  file_integrity.rs  grant.rs  mod.rs  revoke.rs  scan.rs  scan_rootkits.rs
tools/src/self_update/: inspect.rs  mod.rs  update.rs
tools/src/service/: list.rs  mod.rs  restart.rs  start.rs  status.rs  stop.rs
tools/src/web/: api_call.rs  download.rs  http_request.rs  mod.rs  scrape.rs  webhook.rs
