[workspace]
resolver = "2"
members = [
    "initd",
    "agent-core",
    "tools",
    "memory",
    "api-gateway",
    "runtime",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-stream = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
