[package]
name = "aios-orchestrator"
version = "0.1.0"
edition = "2021"
description = "aiOS orchestrator — goal engine, task planner, agent router"

[[bin]]
name = "aios-orchestrator"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
petgraph = "0.6"
priority-queue = "2"
dashmap = "6"
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
rusqlite = { workspace = true }
rcgen = "0.13"
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = { workspace = true }
