[package]
name = "aios-api-gateway"
version = "0.1.0"
edition = "2021"
description = "aiOS external API gateway for Claude and OpenAI integration"

[[bin]]
name = "aios-api-gateway"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-stream = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
