[package]
name = "aios-init"
version = "0.1.0"
edition = "2021"
description = "aiOS PID 1 init daemon"

[[bin]]
name = "aios-init"
path = "src/main.rs"

[dependencies]
nix = { version = "0.29", features = ["mount", "signal", "process", "fs", "hostname"] }
toml = "1.0"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

