[package]
name = "aios-tools"
version = "0.1.0"
edition = "2021"
description = "aiOS tool registry and system tool implementations"

[[bin]]
name = "aios-tools"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
jsonschema = "0.26"
sha2 = "0.10"
walkdir = "2"
nix = { version = "0.31", features = ["fs", "process", "signal", "user"] }
libc = "0.2"
toml = { workspace = true }
rcgen = "0.13"
notify = "6.1"
tokio-util = { workspace = true }
lettre = "0.11"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = { workspace = true }
